--- a/config.yaml
+++ b/config.yaml
@@ -2,4 +2,4 @@ API_KEY: ''
 API_SECRET: ''
 ACCESS_TOKEN: ''
 ACCESS_TOKEN_SECRET: ''
-TWITTER_USER: 'realdonaldtrump
+TWITTER_USER: 'realdonaldtrump'
